# wxl-core

./: CMakeLists.txt  README.md
scripts/: .gitignore
src/: Wraith.cpp
src/Core/: Hook.cpp  Hook.hpp  Logger.cpp  Logger.hpp  Mem.cpp
src/core/: Main.cpp  View.hpp
src/events/: Event.hpp
src/game/doodad/: Doodad.hpp
src/game/m2/: M2.hpp
src/game/wmo/: Wmo.hpp
src/gpu/: Proxy.cpp
src/host/: main.cpp
src/host/db2/: DB2.cpp  DB2.hpp  DB2File.cpp  DB2File.hpp  Db2Store.cpp  Db2Store.hpp
src/host/ipc/: ShmServer.cpp  ShmServer.hpp
src/host/mpq/: MpqStore.cpp  MpqStore.hpp
src/ipc/: Protocol.hpp
src/offsets/: OffsetsDispatcher.hpp
src/offsets/engine/: Draw.hpp  Gx.hpp  Io.hpp  Mem.hpp
src/offsets/game/: ADT.hpp  DB2.hpp  Doodad.hpp  M2.hpp  WMO.hpp  World.hpp
src/overlay/: Panels.cpp  Panels.hpp
src/patcher/: Patcher.cpp
src/runtime/: GameHooks.cpp  GameHooks.hpp  InputHooks.cpp  InputHooks.hpp  RenderHooks.cpp  RuntimeDispatcher.hpp
src/runtime/bonessplitter/: BonesSplitter.cpp  BonesSplitter.hpp
src/runtime/db2/: DB2FileClient.cpp  DB2Mgr.cpp  DB2Mgr.hpp  MapOverride.cpp  MapOverride.hpp
src/runtime/db2/Definitions/: CharSections.hpp  Map.hpp  ModelFilePath.hpp  TextureFilePath.hpp
src/runtime/gpu/: Capture.cpp  Capture.hpp  Device.cpp  Device.hpp  Proxy.cpp  Proxy.def  Proxy.hpp
src/runtime/m2/: Anim.cpp  Anim.hpp  Bone.cpp  Bone.hpp  Loader.cpp  Loader.hpp  M2Runtime.hpp  Mahjong.cpp  Mahjong.hpp  Particle.cpp  Particle.hpp  Ribbon.cpp  Ribbon.hpp
src/runtime/mahjong/: Mahjong.hpp
src/runtime/multipass/: MultiPass.hpp
src/runtime/storage/: ShmClient.cpp  ShmClient.hpp  StorageHook.cpp  StorageHook.hpp
src/runtime/wmo/: WmoGuards.cpp  WmoGuards.hpp
src/structure/: Resolver.hpp  StructureDispatcher.cpp  StructureDispatcher.hpp
src/structure/ADT/: AdtMerge.cpp  AdtMerge.hpp  Client.hpp  Source.hpp
src/structure/M2/: Client.hpp  M2Translate.cpp  M2Translate.hpp  Source.hpp
src/structure/WDL/: Client.hpp  Source.hpp  WdlRebuild.cpp  WdlRebuild.hpp
src/structure/WDT/: Client.hpp  Source.hpp  WdtFixup.cpp  WdtFixup.hpp
src/structure/WMO/: Client.hpp  Source.hpp  WmoTranslate.cpp  WmoTranslate.hpp
src/structure/m2/: M2Format.hpp
src/utils/: ADTUtils.hpp  M2Utils.hpp  UtilsDispatcher.hpp  WDLUtils.hpp  WDTUtils.hpp  WMOUtils.hpp
